client: add basic ws test

--- a/client/src/app/index.html
+++ b/client/src/app/index.html
@@ -9,6 +9,11 @@
 
     <body>
         pasteNG
+
+        <button id="ws-button">Test</button>
+        <span id="ws-receive"></span>
+
+        <script src="ts/websocket.ts"></script>
     </body>
 
 </html>
